--- a/style.css
+++ b/style.css
@@ -139,6 +139,10 @@ position: relative;
  align-items: center;
  justify-content: center;
 }
+#delayLoad{
+  opacity: 0;
+  transition: all 2s linear;
+}
 
 /*make the image on the circle*/
 .sliderWrapper .sliderItem .sliderImg{
@@ -245,7 +249,7 @@ position: relative;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    z-index: -10;
+    opacity: 0;
 }
 
 /*style image*/
@@ -264,12 +268,12 @@ position: relative;
 #car~.featureDesc,#car~.featureTitle{
   position: relative;
   bottom: -100;
-  transition: all 3s ease-in-out;
+  transition: all 2s ease-in-out;
 }
 #refund{
   position: relative;
   bottom: -100;
-  transition: all 3s ease-in-out;
+  transition: all 2s ease-in-out;
 }
 #gift{
   position: relative;
